--- a/home_page/templates/home.html
+++ b/home_page/templates/home.html
@@ -4,6 +4,14 @@
     Головна сторінка
 {% endblock %}
 
+{% block link %}
+    <link rel="stylesheet" href="{{ url_for('home.static', filename = 'home.css') }}">
+{% endblock %}
+
 {% block content %}
-    <h1>Так</h1>
+    <div class = "links">
+        <a href = "http://127.0.0.1:5000/registration">REGISTRATION</a>
+        <a href = "http://127.0.0.1:5000/authorization">AUTHORIZATION</a>
+    </div>
+    <h1>HOME PAGE</h1>
 {% endblock %}
