--- a/registration_page/templates/registration.html
+++ b/registration_page/templates/registration.html
@@ -4,6 +4,21 @@
     Сторінка реєстрації
 {% endblock %}
 
+{% block link %}
+    <link rel="stylesheet" href="{{ url_for('registration.static', filename = 'reg.css') }}">
+{% endblock %}
+
 {% block content %}
-    <h1>Ні</h1>
+    <a href = "http://127.0.0.1:5000/authorization">AUTHORIZATION</a>
+    <form method = "post" id = "registration_content">
+        <h1>Login</h1>
+        <input class = "registration_input" type = "text" name = "name">
+        <h1>Email</h1>
+        <input class = "registration_input" type = "text" name = "email">
+        <h1>Password</h1>
+        <input class = "registration_input" type = "text" name = "password1">
+        <h1>Password confirmation</h1>
+        <input class = "registration_input" type = "text" name = "password2">
+        <button class = "registration_submit" type = "submit">Send</button>
+    </form>
 {% endblock %}
