--- a/authorization_page/templates/authorization.html
+++ b/authorization_page/templates/authorization.html
@@ -11,9 +11,9 @@
     <a href="http://127.0.0.1:5000/registration">REGISTRATION</a>
     <form method="post"id = authorization_content>
         <h1>Login or email</h1>
-        <input class = "authorization_input" type = "text" login = "login">
+        <input class = "authorization_input" type = "text" name = "name" required>
         <h1>Password</h1>
-        <input class = "authorization_input" type = "text" name = "password">
+        <input class = "authorization_input" type = "text" name = "password" required>
         <button class = "authorization_submit" type = "submit">Send</button>
     </form>
 {% endblock %}
