--- a/shop_page/static/shop.css
+++ b/shop_page/static/shop.css
@@ -1,69 +1,10 @@
-.product{
-    background-color: red;
-}
-
-.product img{
-    width: 251px;
-    height: 306px;
-    bottom: 8px;
-    right: 16px;
-}
-
-.info{
-    background-color: rgba(0, 255, 0, 0.158);
-    margin-left: 280px;
-    padding: 0px 29px 15px 29px;
-    display: flex;
-    position: absolute;
-}
-.available{
-    background-color: aquamarine;
-    /* margin-left: ; */
-}
-/* .buttons{
-    
-} */
-
-.buttons button{
-    background-color: white;
-    border-color: black;
-    border-radius: 20px;
-    border: solid 2px;
-}
-
-.buttons #chosen{
-    background-color: #EFCB4A;
-}
-
-.available img{
-    height: 200px;
-}
-
-.info h1{
-    font-size: 32px;
-    font-family: Inter;
-    width: 770px;
-    height: 34px;
-    font-weight: 700;
-    /* line-height: 29.05px; */
-    background-color: brown;
-}
-
-.info h2{
-    font-size: 32px;
-    font-family: Inter;
-    align-items: center;
-    font-weight: 700;
-    /* background-color: aqua; */
-    position: absolute;
-    text-align: center;
-    margin-top: 6%;
-}
-
-.info h2 span{
-    font-size: 24px;
-    font-family: Inter;
-    font-weight: 700;
+header{
+    /* background-color: aquamarine; */
+    width: Fixed (1,440px)px;
+    height: Fixed (80px)px;
+    padding: 17px 39px 17px 39px;
+    gap: 387px;
+    opacity: 0px;
 }
 
 .links{
@@ -88,6 +29,130 @@
     height: 44px;
     /* background-color: blueviolet; */
     text-align: center;
+}
+
+
+main{
+    width: Fixed (1,440px)px;
+    height: Fixed (1,203px)px;
+    top: 48px;
+    left: 1561px;
+    padding: 10px 10px 10px 39px;
+    gap: 10px;
+    opacity: 0px;
+}
+
+.product{
+    width: 1350px;
+    /* height: 1089px; */
+    padding: 31px 15px 31px 15px;
+    gap: 10px;
+    opacity: 0px;
+    /* background-color: red; */
+}
+
+.product img{
+    width: 251px;
+    height: 306px;
+    bottom: 8px;
+    right: 16px;
+}
+
+.info{
+    /* background-color: rgba(0, 255, 0, 0.158); */
+    margin-left: 280px;
+    display: flex;
+    position: absolute;
+    width: 1105px;
+    height: 291px;
+    padding: 0px 29px 15px 29px;
+    gap: 15px;
+    border-right: solid 2px;
+    border-left: solid 2px;
+    opacity: 0px;
+}
+
+.available{
+    /* background-color: aquamarine; */
+    position: absolute;
+    margin-top: 20%;
+    width: 950px;
+    height: 42px;
+    padding: 5px 14px 5px 0px;
+    gap: 488px;
+    opacity: 0px;
+}
+
+.buttons{
+    position: absolute;
+    /* background-color: antiquewhite; */
+}
+
+.buttons button{
+    background-color: white;
+    border-color: black;
+    border-radius: 20px;
+    border: solid 2px;
+}
+
+.buttons #chosen{
+    background-color: #EFCB4A;
+}
+
+.available img{
+    width: 38.12px;
+    height: 36px;
+    gap: 0px;
+    opacity: 0px;
+    position: absolute;
+    margin-left: 40%;
+}
+
+.available p{
+    width: 183px;
+    height: 28px;
+    gap: 0px;
+    opacity: 0px;
+    font-family: Inter;
+    font-size: 16px;
+    font-weight: 700;
+    line-height: 19.36px;
+    text-align: center;
+    margin-left: 98%;
+}
+
+.info h1{
+    font-size: 32px;
+    font-family: Inter;
+    width: 1300px;
+    height: 34px;
+    font-weight: 700;
+}
+
+.info h2{
+    font-size: 32px;
+    font-family: Inter;
+    align-items: center;
+    font-weight: 700;
+    /* background-color: aqua; */
+    position: absolute;
+    text-align: center;
+    margin-top: 6%;
+}
+
+.info h3{
+    position: absolute;
+    margin-top: 16%;
+    font-family: Inter;
+    font-size: 24px;
+    font-weight: 700;
+    line-height: 29.05px;
+    text-align: center;
+    width: 122px;
+    height: 36px;
+    gap: 0px;
+    opacity: 0px;
+
 }
 
 #buy{
