--- a/basket_page/templates/basket.html
+++ b/basket_page/templates/basket.html
@@ -8,16 +8,18 @@
     <link rel="stylesheet" href="{{ url_for('home.static', filename = 'home.css') }}">
 {% endblock %}
 
-{% block header %}
-    <div class = "links">
-        <a href = "/">HOME</a>
-        <a href = "/shop">SHOP</a>
-        <a href = "/basket">BASKET</a>
-        <a href = "/contacts">CONTACTS</a>
-    </div>
-{% endblock %}
-
-
 {% block content %}
-    <h1>BASKET</h1>
+
+    <header>
+        <div class="links">
+            <a class = "options" href = "/">HOME</a>
+            <a class = "options" href = "/shop">SHOP</a>
+            <a class = "active" href = "/basket">BASKET</a>
+            <a class = "options" href = "/contacts">CONTACTS</a>
+        </div>
+    </header>
+
+    <main>
+        <h1>BASKET</h1>
+    </main>
 {% endblock %}
