--- a/shop_page/templates/shop.html
+++ b/shop_page/templates/shop.html
@@ -14,10 +14,10 @@
 
     <header>
         <div class="links">
-            <a href = "/">HOME</a>
-            <a href = "/shop">SHOP</a>
-            <a href = "/basket">BASKET</a>
-            <a href = "/contacts">CONTACTS</a>
+            <a class = "options" href = "/">HOME</a>
+            <a class = "active" href = "/shop">SHOP</a>
+            <a class = "options" href = "/basket">BASKET</a>
+            <a class = "options" href = "/contacts">CONTACTS</a>
         </div>
     </header>
 
