--- a/home_page/templates/home.html
+++ b/home_page/templates/home.html
@@ -17,7 +17,12 @@
             <a class = "options" href = "/basket">BASKET</a>
             <a class = "options" href = "/contacts">CONTACTS</a>
         </div>
+        {% if current_user.is_authenticated %}
+            <h1 class = "username">{{ current_user.name }}</h1>
+        {% endif %}
     </header>
-
-    <h1>HOME PAGE</h1>
+    <main>
+        <h1>HOME PAGE</h1>
+    </main>
+   
 {% endblock %}
