--- a/basket_page/templates/basket.html
+++ b/basket_page/templates/basket.html
@@ -17,6 +17,9 @@
             <a class = "active" href = "/basket">BASKET</a>
             <a class = "options" href = "/contacts">CONTACTS</a>
         </div>
+        {% if current_user.is_authenticated %}
+            <h1 class = "username">{{ current_user.name }}</h1>
+        {% endif %}
     </header>
 
     <main>
