--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -6,6 +6,8 @@
         {% block link %}{% endblock %}
     </head>
     <body>
+        <!-- {% block script %}
+        {% endblock %} -->
 
         {% block content %}
         {% endblock %}
