--- a/contacts_page/templates/contacts.html
+++ b/contacts_page/templates/contacts.html
@@ -13,7 +13,7 @@
         <div class="links">
             <a class = "options" href = "/">HOME</a>
             <a class = "options" href = "/shop">SHOP</a>
-            <a class = "options" href = "/basket">BASKET</a>
+            <a class = "options" href = "/cart">CART</a>
             <a class = "active" href = "/contacts">CONTACTS</a>
         </div>
         {% if current_user.is_authenticated %}
