--- a/home_page/templates/home.html
+++ b/home_page/templates/home.html
@@ -14,7 +14,7 @@
         <div class="links">
             <a class = "active" href = "/">HOME</a>
             <a class = "options" href = "/shop">SHOP</a>
-            <a class = "options" href = "/basket">BASKET</a>
+            <a class = "options" href = "/cart">CART</a>
             <a class = "options" href = "/contacts">CONTACTS</a>
         </div>
         {% if current_user.is_authenticated %}
