cart plus minus delete

--- a/shop_page/templates/shop.html
+++ b/shop_page/templates/shop.html
@@ -34,6 +34,7 @@
                 <div class = "info"> 
                     <h1>{{ product.name }}</h1>
                     <h2>{{ product.price }}</h2>
+                    <h4>Знижка {{ product.discount }}%</h4>
                     <button class = "buy" id = "{{ product.id }}">КУПИТИ</button>
                     <h3>Ємність:</h3>
   
