--- a/cart_page/static/cart.css
+++ b/cart_page/static/cart.css
@@ -64,62 +64,199 @@ header{
     text-align: right;
 }
 main{
-    background-color: rgb(13, 255, 174);
+    /* background-color: rgb(13, 255, 174); */
     width:  1,350px;
     height:  1,089px;
     padding: 31px 30px 31px 30px;
     gap: 30px;
     opacity: 0px;
-
 }
+
 .products{
-    width: 820px;
+    width: 850px;
     height: 200px;
     padding: 10px 0px 0px 0px;
-    gap: 12px;
+    gap: 23px;
     border: 0px 3px 0px 0px;
     opacity: 0px;
-    border: 1px 0px 0px 0px;
-    background-color: blue;
+    border-right: 3px solid black; 
+    margin-bottom: 20px;
 }
-/* .product img{
-    width: 148px;
-    height: 179px;
-    gap: 0px;
-    opacity: 0px;
 
+.products .images{
+    width: 150px;
+    height: 150px;
+}
 
-} */
-
-/* .h1{
-    width:  41px;
-    height:  41px;
-    padding: 10px 0px 0px 0px;
-    gap: 10px;
-    opacity: 0px; */
-
-/* } */
 .products h2{
+    /* background-color: black; */
     width: 147px;
     height: 97px;
     gap: 0px;
     opacity: 0px;
+    font-family: Inter;
+    font-size: 28px;
+    font-weight: 700;
+    line-height: 33.89px;
+    text-align: center;
+    /* margin-top: 100x; */
+    /* right:50px ; */
+    left: 44%;
+    margin-top: 50px ;
+    position: absolute;
 }
-.minus, .plus{
-    background-color: #EFCB4A;
+.minus, .plus, .delete{
+    background-color:#EFCB4A;
+    width: 41px;
+    height: 41px;
+    /* padding: 10px 0px 0px 0px; */
+    gap: 10px;
+    opacity: 0px;
+    position: absolute;
+    font-size: 29px;
+    place-items: center;
+    margin-top: 50px;
+}
+
+.minus{
+    left: 35%;
+}
+.plus{
+    left: 41%;
+}
+.delete{
+    background-color:#ffffff;
+    left: 38%;
+    margin-top: 7%;
+    border: none;
+}
+
+.product_quantity{
+    /* background-color: aquamarine; */
     width: 41px;
     height: 41px;
     padding: 10px 0px 0px 0px;
     gap: 10px;
-    border: 1px 0px 0px 0px;
-    opacity: 0px;
     position: absolute;
+    left: 38%;
+    font-family: Inter;
+    font-size: 28px;
+    font-weight: 700;
+    line-height: 33.89px;
+    text-align: center;
+    margin-top: 3%;
 }
 
 .name{
     color: black;
     size: 28px;
     text-align: center;
-    width: 285px;
-    height: 117px;
+    width: 20%;
+    height: 15%;
+    position: absolute;
+    left: 12%;
+}
+
+.order{
+    right: 10%;
+    top: 10%;
+    position: absolute;
+}
+.checkout{
+    width: 374px;
+    height: 104px;
+    padding: 10px 0px 0px 0px;
+    gap: 10px;
+    border-radius: 15px;
+    border: 1px, solid;
+    background-color: #EFCB4A;;   
+    font-family: Inter;
+    font-size: 22px;
+    font-weight: 700;
+    line-height: 26.63px;
+    text-align: center;
+}
+.calculation{
+    /* background-color: aquamarine; */
+    width: 377px;
+    height: 53px;
+    padding: 10px 0px 0px 0px;
+    gap: 26px;
+    right: 10%;
+    top: 10%;
+    /* margin: 10%; */
+}
+
+.order .calculation h6{
+    width: 175px;
+    height: 22px;
+    font-family: Inter;
+    font-size: 18px;
+    font-weight: 700;
+    line-height: 21.78px;
+    text-align: left;
+}
+.order .calculation h3{
+    width: 156px;
+    height: 44px;
+    font-family: Inter;
+    font-size: 22px;
+    font-weight: 700;
+    line-height: 26.63px;
+    text-align: right;
+    font-family: Inter;
+    top: 47%;
+    right: 2%;
+    position: absolute;
+}
+
+.order .calculation h5{
+    width: 191px;
+    height: 44px;
+    font-family: Inter;
+    font-size: 18px;
+    font-weight: 700;
+    line-height: 21.78px;
+    text-align: left;  
+    top: 15%;
+    right: 5%;  
+}
+
+.order .calculation h4{
+    width: 191px;
+    height: 44px;
+    gap: 0px;
+    opacity: 0px;
+    font-family: Inter;
+    font-size: 24px;
+    font-weight: 800;
+    line-height: 29.05px;
+    text-align: left;
+        
+}
+.order .calculation p{
+    width: 156px;
+    height: 44px;
+    font-family: Inter;
+    font-size: 24px;
+    font-weight: 800;
+    line-height: 29.05px;
+    text-align: right;
+    position: absolute; 
+    top: 85%;
+    right: 2%;
+}
+
+.order .calculation h2{
+    /* background-color: bisque; */
+    font-family: Inter;
+    font-size: 22px;
+    font-weight: 700;
+    line-height: 26.63px;
+    text-align: right;
+    width: 156px;
+    height: 44px;
+    position: absolute;
+    top: 65%;
+    right: 2%
 }
