--- a/cart_page/templates/cart.html
+++ b/cart_page/templates/cart.html
@@ -27,15 +27,36 @@
     <main>
         <!-- <h1>CART</h1> -->
         {% for product in products %}
-            <div class = "products" id = "product={{ product.id }}">
+            <div class = "products", id = "{{ product.id }}">
+                <h2 class = "product-price" id = "{{ product.id }}">{{ product.price }}</h2>
+                <button class = "delete" id = "{{ product.id }}">🗑️</button>
+                <button class = "minus" id = "{{ product.id }}">-</button>   
+                <h3 class = "product_quantity" id = "quantity {{ product.id }}">{{ quantity[product.id | string] }}</h3>
+                <button class = "plus" id = "{{ product.id }}">+</button>
+                
                 <h1 class = " name" id = "{{ product.name }}">{{ product.name }}</h1>
-                <button class = "minus" id = "{{ product.id }}">-</button>
+                <img class = "images" src="{{ url_for('cart.static', filename = 'images/' + product.image) }}" alt="">
                 <!-- <h1>{{ product.id }}</h1> -->
-                <h1>{{ quantity[product.id | string] }}</h1>
-                <button class = "plus" id = "{{ product.id }}">+</button>   
-                <h2>{{ product.price}}</h2>
            </div>
+    
         {% endfor %}
+        <div class = "order">
+            <button class = "checkout">ПЕРЕЙТИ ДО ОФОРМЛЕННЯ</button>
+            <div class = "calculation">
+                <h6 class = "price" ><span id = "count-product">0</span> товарів на суму</h6>
+                <h3 class = "price"><span id = "total-price"></span>грн</h3>
+            </div>
+            <div class = "calculation">
+                <h5 class = "price">Знижка</h5>
+                <h2 class = "price">25459 грн</h2>
+            </div>
+            <div class = "calculation">
+                <h4 class = "total amount">Загальна сума</h4>
+                <p class = "total amount" id = "total-amount"></p>
+            </div>
+        </div>
+       
     </main>
-    <script src = "{{ url_for('cart.static', filename = 'js/deleteCookies.js' ) }}"></script>
+    <script src = "{{ url_for('cart.static', filename = 'js/buttonsCookies.js' ) }}"></script>
+    <script src = "{{ url_for('cart.static', filename = 'js/productInfo.js' ) }}"></script>
 {% endblock %}
