--- a/shop_page/static/shop.css
+++ b/shop_page/static/shop.css
@@ -135,14 +135,15 @@ main{
 }
 
 .info h2{
-    font-size: 32px;
+    text-decoration: line-through;
     font-family: Inter;
-    align-items: center;
+    font-size: 22px;
     font-weight: 700;
-    /* background-color: aqua; */
+    line-height: 26.63px;
+    text-align: left;
     position: absolute;
     text-align: center;
-    margin-top: 6%;
+    margin-top: 4.7%;
 }
 
 .info h3{
@@ -160,6 +161,18 @@ main{
 
 }
 
+.info h4{
+    font-family: Inter;
+    font-size: 20px;
+    font-weight: 700;
+    line-height: 24.2px;
+    text-align: left;
+    width: 170px;
+    height: 34px;
+    position: absolute;
+    margin-top: 7%;
+}
+
 .buy{
     line-height: 29.05px;
     background-color: #EFCB4A;
@@ -171,7 +184,6 @@ main{
     line-height: 29.05px;
     text-align: center;
     height: 55px;
-    text-align: center;
     border: solid 2px;
     border-radius: 10px;
     position: absolute;
@@ -184,7 +196,7 @@ main{
 .active{
     font-weight: bold;
 }
-#active-basket{
+#active-cart{
     width: 28px;
     height: 27px;
     gap: 0px;
