--- a/home_page/templates/home.html
+++ b/home_page/templates/home.html
@@ -16,6 +16,7 @@
             <a class = "options" href = "/shop">SHOP</a>
             <a class = "options" href = "/cart">CART</a>
             <a class = "options" href = "/contacts">CONTACTS</a>
+            <a class = "options" href = "/admin">ADMIN</a>
         </div>
         {% if current_user.is_authenticated %}
             <h1 class = "username">{{ current_user.name }}</h1>
