--- a/contacts_page/templates/contacts.html
+++ b/contacts_page/templates/contacts.html
@@ -15,6 +15,7 @@
             <a class = "options" href = "/shop">SHOP</a>
             <a class = "options" href = "/cart">CART</a>
             <a class = "active" href = "/contacts">CONTACTS</a>
+            <a class = "options" href = "/admin">ADMIN</a>
         </div>
         {% if current_user.is_authenticated %}
             <h1 class = "username">{{ current_user.name }}</h1>
