--- a/admin_page/static/admin.css
+++ b/admin_page/static/admin.css
@@ -109,13 +109,13 @@ main{
     top: -12px;
 }
 
-.available .buttons .pencil{
+/* .available .buttons .pencil{ */
     /* position: absolute; */
-    display: inline-block;
+    /* display: inline-block; */
     /* right: 5px; */
-}
+/* } */
 
-.available .buttons .pencil .description{
+.available .buttons .pencil .pencil-description{
     /* position: absolute; */
     display: inline-block;
 }
@@ -148,6 +148,7 @@ main{
     width: 1300px;
     height: 34px;
     font-weight: 700;
+    margin: 5px;
 }
 
 .info h2{
@@ -159,7 +160,7 @@ main{
     text-align: left;
     position: absolute;
     text-align: center;
-    margin-top: 4.7%;
+    margin-top: 5.5%;
 }
 
 .info h3{
@@ -177,6 +178,19 @@ main{
     margin-bottom: 0px;
 }
 
+.info h5{
+    position: absolute;
+    /* right: 85%; */
+    margin-top: 10%;
+    font-family: Inter;
+    font-size: 24px;
+    font-family: Inter;
+    /* font-size: 32px; */
+    font-weight: 700;
+    line-height: 38.73px;
+    text-align: left;
+}
+
 .info h4{
     font-family: Inter;
     font-size: 20px;
@@ -186,7 +200,7 @@ main{
     width: 170px;
     height: 34px;
     position: absolute;
-    margin-top: 7%;
+    margin-top: 8%;
 }
 
 .buy{
@@ -250,13 +264,6 @@ main{
     top: 12%;
 
 }
-.info h5{
-    position: absolute;
-    right: 85%;
-    top: 26%;
-    font-family: Inter;
-    font-size: 24px;
-}
 
 /* .buttons .pencil{
     width: 15px;
@@ -266,7 +273,7 @@ main{
     right: 110%;
 } */
 
-.image, .info .pencil{
+.image, .info .pencil, .pencil-name, .pencil-price, .pencil-discount, .pencil-description{
     width: 30px;
     height: 30px;
     border: 3px solid black;
@@ -277,18 +284,32 @@ main{
     margin: 0;
 }
 
-.pencil .price{
-    width: 15px;
-    height: 15px;
-    top: 7px;
-    left: -100px;  
+.pencil-name{
+    position: absolute;
+    left: 1050px;  
+    top: 25px;
 }
-.info .pencil-name{
+
+.pencil-discount{
+    position: absolute;
+    left: 200px;  
+    top: 90px;
+}
+
+.pencil-price{
+    /* width: 15px;
+    height: 15px; */
+    /* top: 7px; */
+    position: absolute;
+    left: 200px;  
+    top: 53px;
+}
+/* .info .pencil-name{
     background-color: #000000;
     left: 100px;
-}
-.pencil .name{
-    /* background-color: #000000; */
+} */
+/* .pencil .pencil-name{
+    background-color: #000000;
     width: 15px;
     height: 15px;
     top: 7px;
@@ -298,19 +319,77 @@ main{
     position: absolute;
     margin: 0 auto;
     margin-top: 100px;
-}
+} */
 
-.pencil .description{
-    width: 15px;
-    height: 15px;
-    top: 7px;
-    left: 7.5px;
-}
 .pencil .image{
-    /* width: 15px;
-    height: 15px; */
     position: relative;
     left: 270px;
     top: -220px;
     border: 3px solid black;
+}
+
+.price-input{
+    position: absolute;
+    top: 190px;
+    border: 3px solid black;
+    left: 380px;
+    width: 150px;
+    height: 30px;
+    border: 3px solid;
+    border-radius: 10px;
+}
+.price-button{
+    position: absolute;
+    border: 3px solid black;
+    width: 35px;
+    height: 35px;
+    border: 3px solid;
+    border-radius: 10px;
+    background-color: #EFCB4A;
+    left: 560px;  
+    top: 180px;
+}
+
+.name-input{
+    position: absolute;
+    top: 140px;
+    border: 3px solid black;
+    left: 380px;
+    width: 900px;
+    height: 40px;
+    border: 3px solid;
+    border-radius: 10px;
+}
+.name-button{
+    position: absolute;
+    top: 140px;
+    border: 3px solid black;
+    left: 1400px;
+    width: 50px;
+    height: 50px;
+    border: 3px solid;
+    border-radius: 10px;
+    background-color: #EFCB4A;
+}
+
+.discount-input{
+    position: absolute;
+    border: 3px solid black;
+    left: 380px;
+    width: 150px;
+    height: 30px;
+    top: 222px;
+    border: 3px solid;
+    border-radius: 10px;
+}
+.discount-button{
+    position: absolute;
+    top: 220px;
+    border: 3px solid black;
+    left: 560px;
+    width: 35px;
+    height: 35px;
+    border: 3px solid;
+    border-radius: 10px;
+    background-color: #EFCB4A;
 }
