--- a/shop_page/static/shop.css
+++ b/shop_page/static/shop.css
@@ -177,9 +177,9 @@ main{
 .buy{
     line-height: 29.05px;
     background-color: #EFCB4A;
-    align-items: center;
     font: Inter;
-    width: 149px;font-family: Inter;
+    width: 149px;
+    font-family: Inter;
     font-size: 24px;
     font-weight: 700;
     line-height: 29.05px;
@@ -212,7 +212,7 @@ main{
     line-height: 24.2px;
     text-align: center;
     position: absolute;
-    margin-left: 300px;
+    margin-left: 100px;
 }
 
 .username{
