--- a/admin_page/templates/admin.html
+++ b/admin_page/templates/admin.html
@@ -78,7 +78,7 @@
                 </div>
                 <img src = "{{ url_for( 'shop.static', filename = 'images/' + product.image ) }}">
             </div>
-            <script src = "{{ url_for('admin.static', filename = 'js/admin_copy.js')}}" defer></script>
+            <script src = "{{ url_for('admin.static', filename = 'js/admin.js')}}" defer></script>
             <button class="pencil-image" id = "{{ product.id }}">
                 <p class="image">✏</p>
             </button> 
